k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-deployment
  namespace: 	martino-app
  labels:
    app: httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "512M"
          requests:
            cpu: "0.1"
