k8s-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: martino-service 
  namespace: martino-app
spec:
  type: NodePort
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30700
