k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: martino-test-service
  namespace: martino-app
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
