k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: martino-service
  namespace: martino-app
spec:
  rules:
  - host: "jojolinux"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: martino-service
            port:
              number: 80
